terraform/environments/eks/k8s-manifests-sandbox/app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credreg-sandbox
  labels:
    name: main-app
