terraform/environments/eks/k8s-manifests-sandbox/debug-aws-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-aws-cli
  namespace: credreg-sandbox
  labels:
    app: debug-aws-cli
spec:
  serviceAccountName: main-app-service-account
  restartPolicy: Never
  priorityClassName: sandbox-low
  nodeSelector:
    env: sandbox
  tolerations:
    - key: "env"
      operator: "Equal"
      value: "sandbox"
      effect: "NoSchedule"
  containers:
    - name: awscli
      image: public.ecr.aws/aws-cli/aws-cli:latest
      imagePullPolicy: IfNotPresent
      command: ["sh", "-lc", "echo Ready; sleep 3600"]
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"
