terraform/environments/eks/k8s-manifests-sandbox/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app
  namespace: credreg-sandbox
  labels:
    app: worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: worker-app
        app-lang: ruby
    spec:
      priorityClassName: sandbox-medium
      nodeSelector:
        env: sandbox
      tolerations:
        - key: "env"
          operator: "Equal"
          value: "sandbox"
          effect: "NoSchedule"
      serviceAccountName: main-app-service-account
      containers:
        - name: worker
          image: 996810415034.dkr.ecr.us-east-1.amazonaws.com/registry:sandbox
          imagePullPolicy: Always
          command: ["/bin/bash","-lc"]
          args:
            - |
              if [ -x ./bin/sidekiq ]; then
                ./bin/sidekiq -r ./config/application.rb
              else
                bundle exec sidekiq -r ./config/application.rb
              fi
          volumeMounts:
            - name: argo-workflows-token
              mountPath: /var/run/secrets/argo-workflows
              readOnly: true
          resources:
            requests:
              cpu: "256m"
              memory: "2Gi"            
            limits:
              cpu: "1000m"
              memory: "2Gi"
      volumes:
        - name: argo-workflows-token
          secret:
            secretName: argo-workflows-token
            items:
              - key: token
                path: token
