terraform/environments/eks/k8s-manifests-sandbox/elasticsearch-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: credreg-sandbox
  labels:
    app: elasticsearch
spec:
  clusterIP: None
  selector:
    app: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
