terraform/environments/eks/k8s-manifests-sandbox/opensearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: credreg-sandbox
  name: opensearch
  labels:
    app: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      securityContext:
        fsGroup: 1000   # ensure mounted volume is writable by OpenSearch user
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:3.3.1
          ports:
            - containerPort: 9200 # OpenSearch HTTP port
          resources:
            requests:
              cpu: "512m"
              memory: "4096Mi" 
            limits:
              cpu: "512m"
              memory: "4096Mi"
          securityContext:
            capabilities:
              add: ["IPC_LOCK"] 
          volumeMounts:
            - name: opensearch-data
              mountPath: /usr/share/opensearch/data
      restartPolicy: Always
      volumes:
        - name: opensearch-data
          persistentVolumeClaim:
            claimName: opensearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  selector:
    app: opensearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
